@@ -1,10 +1,0 @@
-2007-03-05 Thiago M. Sayão <thiago.sayao@gmail.com>
-	* Rename the project to MSNPSharp as requested by the original author
-	(Bas Geertsema)
-
-2007-02-27 Thiago M. Sayão <thiago.sayao@gmail.com>
-	* Fix file transfers
-	* Changed the API, added the AcceptTransfer and RejectTransfer instead
-	or using the argument variable Accept to true and false (solve thread
-	problems between the UI and DotMSN)
-
